
syntax = "proto3";

package blobservice;

import "google/protobuf/timestamp.proto";
import "digest.proto";

option java_package = "com.github.smukherj1.masonry.server.proto";
option java_multiple_files = true;
option java_outer_classname = "BlobServiceProto";

service BlobService {
  rpc Query(BlobQueryRequest) returns(BlobQueryResponse) {}
  rpc Download(BlobDownloadRequest) returns (stream BlobDownloadResponse) {}
}

message BlobQueryRequest {
  digest.Digest digest = 1;
}

message BlobQueryResponse{
  google.protobuf.Timestamp created_at = 1;
}

message BlobDownloadRequest {
  digest.Digest digest = 1;
  uint64 offset = 2;
  uint64 limit = 3;
}
message BlobDownloadResponse {
  uint64 offset = 1;
  bytes data = 2;
}